# Scholarly

./: README.md  app.py  arxiv_paper.txt  main.py  pyproject.toml  refined_arxiv_paper.txt  requirements.txt  scraper.py
frontend/: index.html  script.js  style.css
models/: local_llm_runner.py
scholarly/: README.md  pyproject.toml  report.md
scholarly/src/scholarly/: crew.py  main.py
scholarly/src/scholarly/config/: agents.yaml  tasks.yaml
