[project]
name = "scholarly"
version = "0.1.0"
description = "scholarly using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "gtts>=2.5.4",
    "pypdf>=5.8.0",
    "pypdf2>=3.0.1",
]

[project.scripts]
scholarly = "scholarly.main:run"
run_crew = "scholarly.main:run"
train = "scholarly.main:train"
replay = "scholarly.main:replay"
test = "scholarly.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
